--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename= 'dist/css/main.css') }}">
     <title>{{ title }}</title>
 </head>
-<body>
+<body class="page">
 {% block main %}
 {% endblock %}
 </body>
