--- a/app/static/src/scss/main.scss
+++ b/app/static/src/scss/main.scss
@@ -3,3 +3,5 @@
 @import "grid/grid";
 @import "width/width";
 @import "components/base";
+@import "components/weather";
+@import "components/control";
