--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,40 @@
 {% extends '_base.html' %}
 {% block main %}
-<div class="container">
-    <h1>Work </h1>
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, consectetur.</span>
-</div>
+<div class="content-wrap">
+    <div class="container">
+        <div class="weather">
+            <div class="weather__content-top">
+                <div class="grid">
+                    <div class="grid__item width-1-2">TOP 1</div>
+                    <div class="grid__item width-1-2">TOP 2</div>
+                </div>
+            </div>
+            <div class="weather__content-middle">
+                <div class="grid">
+                    <div class="grid__item width-1-1 width-1-2-md">MIDDLE 1</div>
+                    <div class="grid__item width-1-1 width-1-2-md">MIDDLE 2</div>
+                </div>
+            </div>
+            <div class="weather__content-bottom">
+                <div class="grid">
+                    <div class="grid__item width-1-3">BOTTOM 1</div>
+                    <div class="grid__item width-1-3">BOTTOM 2</div>
+                    <div class="grid__item width-1-3">BOTTOM 3</div>
+                </div>
+            </div>
+            <div class="control-panel">
+                <div class="control-panel__box-button">
+                    <div class="grid">
+                        <div class="grid__item width-1-2">
+                            <button class="button">B1</button>
+                        </div>
+                        <div class="grid__item width-1-2">
+                            <button class="button">B2</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>         
 {% endblock %}
