--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,26 @@
         <div class="weather">
             <div class="weather__content-top">
                 <div class="grid">
-                    <div class="grid__item width-1-2">TOP 1</div>
-                    <div class="grid__item width-1-2">TOP 2</div>
+                    <div class="grid__item width-1-2">
+                        <div class="card-notifi">
+                            <div class="card-notifi__content_top">
+                                <span class="card-notifi__txt card-notifi__txt_big">15</span>
+                            </div>
+                            <div class="card-notifi__content_bottom">
+                                <span class="card-notifi__txt card-notifi__txt_accent">Пятница</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid__item width-1-2">
+                        <div class="card-notifi">
+                            <div class="card-notifi__content_top">
+                                <span class="card-notifi__txt card-notifi__txt_big">Харьков</span>
+                            </div>
+                            <div class="card-notifi__content_bottom">
+                                <span class="card-notifi__txt card-notifi__txt_accent">12:30</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="weather__content-middle">
