--- a/app/static/src/scss/components/_weather.scss
+++ b/app/static/src/scss/components/_weather.scss
@@ -9,7 +9,7 @@
         // background-color: rgb(212, 103, 103);
     }
     &__content-middle {
-        background-color: rgb(206, 226, 116);
+        // background-color: rgb(206, 226, 116);
     }
     &__content-bottom {
         background-color: rgb(70, 150, 224);
