--- a/app/static/src/scss/vars/_variables.scss
+++ b/app/static/src/scss/vars/_variables.scss
@@ -13,7 +13,7 @@ $swatch_5: #FFDB4D;
 $swatch_6: #00AAD45C; 
 $swatch_7: #c4c4c428;
 $swatch_8: #E5E5E5;
-$swatch_9: #d33682;
+$swatch_9: #e61278;
 $swatch_10: #00000040;
-
+$swatch_11: #00000070;
 
