--- a/app/static/src/scss/components/_cards.scss
+++ b/app/static/src/scss/components/_cards.scss
@@ -114,6 +114,9 @@
         width: 80px;
         height: auto;
         overflow: hidden;
+        @media (min-width: $sm) {
+            width: 65px;
+        }
 
     }
     &__picture{
