--- a/app/static/src/scss/components/_weather.scss
+++ b/app/static/src/scss/components/_weather.scss
@@ -1,8 +1,8 @@
 .weather {
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: $swatch_0;
-    border: 1px solid $swatch_2;
+    background-color: rgba($swatch_0, 0.3);
+    // border: 1px solid $swatch_2;
     @media (min-width: $md) {
         margin-top: 50px;
     }
