data output to the template and buttons operation

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,20 +10,20 @@
                             <div class="grid__item width-1-1 width-1-2-sm">
                                 <div class="card-notifi card-notifi_position_left">
                                     <div class="card-notifi__content-top">
-                                        <span class="card-notifi__txt card-notifi__txt_big">15</span>
+                                        <span class="card-notifi__txt card-notifi__txt_big">{{ data["date"][0]["data_calendar"] }}</span>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent">Пятница</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent">{{ data["date"][2]["day"] }}</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="grid__item width-1-1 width-1-2-sm">
                                 <div class="card-notifi card-notifi_position_right">
                                     <div class="card-notifi__content-top">
-                                        <span class="card-notifi__txt card-notifi__txt_big">Харьков</span>
+                                        <span class="card-notifi__txt card-notifi__txt_big">{{ data["city"] }}</span>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent">12:30</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent">{{ data["date"][1]["time"] }}</span>
                                     </div>
                                 </div>
                             </div>
@@ -34,21 +34,21 @@
                             <div class="grid__item width-1-1 width-1-2-sm">
                                 <div class="infographic infographic_position_left">
                                     <figure class="infographic__box-picture">
-                                        <img src="{{url_for('static', filename='images/weather/10d.svg')}}" alt="picture weather" class="infographic__picture">
+                                        <img src="{{url_for('static', filename='images/weather/' + data['icon'] + '.svg')}}" alt="picture weather" class="infographic__picture">
                                     </figure>
                                 </div>
                             </div>
                             <div class="grid__item width-1-1 width-1-2-sm">
                                 <div class="card-notifi card-notifi_position_right">
                                     <div class="card-notifi__content-top card-notifi__content-top_position-deg">
-                                        <span class="card-notifi__txt card-notifi__txt_big card-notifi__txt_big-mega">15</span>
+                                        <span class="card-notifi__txt card-notifi__txt_big card-notifi__txt_big-mega">{{ data["temp"] }}</span>
                                         <span class="card-notifi__txt card-notifi__txt_big card-notifi__txt_position-sing">
                                             <span class="card-notifi__sing-o">o</span>
                                             <span class="card-notifi__sing-c">c</span>
                                         </span>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent">Легкий дождь</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent">{{ data["desc"] }}</span>
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                                         </figure>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent">40%</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent">{{ data["humidity"] }}%</span>
                                     </div>
                                 </div>        
                             </div>
@@ -76,7 +76,7 @@
                                         </figure>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent">2.68 м/с</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent">{{ data["wind"] }} м/с</span>
                                     </div>
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                                         </figure>
                                     </div>
                                     <div class="card-notifi__content-bottom">
-                                        <span class="card-notifi__txt card-notifi__txt_accent card-notifi__txt_position-top">10000 м</span>
+                                        <span class="card-notifi__txt card-notifi__txt_accent card-notifi__txt_position-top">{{ data["visibility"] }} м</span>
                                     </div>
                                 </div>
                             </div>
@@ -99,30 +99,34 @@
                             <div class="grid__item width-1-2">
                                 <div class="control-panel__box-button control-panel__box-button_position_left">
                                     <button class="button">
-                                        <div class="button__box-picture">
-                                            <svg width="72" height="63" viewBox="0 0 72 63" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M30.6709 9.61876C21.0898 11.475 12.5291 19.7438 9.92126 29.5313C6.23622 43.65 15.2504 58.3875 29.8772 62.1563C44.7874 66.0375 60.4346 55.6875 63.0992 40.2188C63.8929 35.4938 63.326 33.525 60.8882 33.3C58.5638 33.075 57.7134 34.2563 57.2032 38.3625C56.3528 45.3938 51.5339 51.9188 44.9008 55.0125C42.1228 56.3063 40.9323 56.5313 36.2835 56.5313C31.6346 56.5313 30.4441 56.3063 27.6661 55.0125C23.1874 52.9313 19.6157 49.5 17.4047 45.0563C15.7039 41.625 15.5905 40.95 15.5905 35.7188C15.5905 30.6563 15.7606 29.8125 17.2346 27C19.389 22.8375 22.7906 19.4063 26.9291 17.2688C30.1039 15.5813 30.6709 15.4688 36.2835 15.4688C41.4425 15.4688 42.5764 15.6375 44.674 16.7625C46.9984 18 47.1118 18.1688 46.2614 19.0688C44.9575 20.475 45.1276 22.275 46.6016 23.2875C47.5087 23.9625 49.2661 24.1875 53.1213 24.1875C57.6567 24.1875 58.5638 24.0188 59.5276 23.0625C61.0016 21.6 60.9449 20.925 58.7906 14.9625C56.8063 9.39376 55.8992 8.49376 53.4614 9.33751C52.2142 9.73125 51.8173 10.2938 51.7039 11.7L51.5339 13.5L48.7559 12.0938C43.3701 9.39376 36.5669 8.43751 30.6709 9.61876Z"/>
-                                            </svg>                                    
-                                        </div>
+                                        <a href="{{url_for('index')}}">
+                                            <div class="button__box-picture">
+                                                <svg width="72" height="63" viewBox="0 0 72 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M30.6709 9.61876C21.0898 11.475 12.5291 19.7438 9.92126 29.5313C6.23622 43.65 15.2504 58.3875 29.8772 62.1563C44.7874 66.0375 60.4346 55.6875 63.0992 40.2188C63.8929 35.4938 63.326 33.525 60.8882 33.3C58.5638 33.075 57.7134 34.2563 57.2032 38.3625C56.3528 45.3938 51.5339 51.9188 44.9008 55.0125C42.1228 56.3063 40.9323 56.5313 36.2835 56.5313C31.6346 56.5313 30.4441 56.3063 27.6661 55.0125C23.1874 52.9313 19.6157 49.5 17.4047 45.0563C15.7039 41.625 15.5905 40.95 15.5905 35.7188C15.5905 30.6563 15.7606 29.8125 17.2346 27C19.389 22.8375 22.7906 19.4063 26.9291 17.2688C30.1039 15.5813 30.6709 15.4688 36.2835 15.4688C41.4425 15.4688 42.5764 15.6375 44.674 16.7625C46.9984 18 47.1118 18.1688 46.2614 19.0688C44.9575 20.475 45.1276 22.275 46.6016 23.2875C47.5087 23.9625 49.2661 24.1875 53.1213 24.1875C57.6567 24.1875 58.5638 24.0188 59.5276 23.0625C61.0016 21.6 60.9449 20.925 58.7906 14.9625C56.8063 9.39376 55.8992 8.49376 53.4614 9.33751C52.2142 9.73125 51.8173 10.2938 51.7039 11.7L51.5339 13.5L48.7559 12.0938C43.3701 9.39376 36.5669 8.43751 30.6709 9.61876Z"/>
+                                                </svg>                                    
+                                            </div>
+                                        </a>
                                     </button>
                                 </div>
                             </div>
                             <div class="grid__item width-1-2">
                                 <div class="control-panel__box-button control-panel__box-button_position_right">
                                     <button class="button">
-                                        <div class="button__box-picture button__box-picture_position">
-                                            <svg width="72" height="63" viewBox="0 0 72 63" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <g clip-path="url(#clip0_3_5)">
-                                                    <path d="M27.6172 0.689068C27.2057 1.08282 26.5886 2.85469 26.2286 4.57735C25.5086 8.31797 25.4057 8.51485 23.2457 9.54844L21.4972 10.3852L18 8.41641C16.0457 7.28438 14.0914 6.39844 13.6286 6.39844C12.7543 6.39844 7.45715 10.9758 6.58286 12.4523C6.22286 13.1906 6.53144 14.1258 8.22858 16.882C10.3372 20.3273 10.3886 20.475 9.72001 22.3453C9.00001 24.2648 8.89715 24.3141 5.14286 25.2492C3.03429 25.7414 1.02858 26.3813 0.668578 26.6766C-0.257136 27.4148 -0.257136 35.6344 0.720007 36.5203C1.08001 36.9141 3.13715 37.6031 5.24572 38.0461C9.00001 38.932 9.10287 38.9813 9.77144 40.8516C10.3886 42.6234 10.3372 42.8695 8.69144 45.5766C5.81144 50.3508 5.76001 49.957 9.66858 53.7469C13.6286 57.4875 13.2172 57.4383 18.2057 54.682C21.0343 53.107 21.2914 53.0578 23.1429 53.6484C25.0972 54.2883 25.1486 54.3867 26.0743 57.9797C26.5372 59.9977 27.2572 61.9664 27.6686 62.3109C28.5943 63.2461 37.1829 63.2461 37.9543 62.3602C38.2629 62.0156 38.9314 60.0961 39.4457 58.0781C40.4229 54.4852 40.4743 54.3867 42.48 53.6977C44.4343 53.0578 44.5886 53.107 48.1886 55.125C51.0686 56.7492 52.0457 57.0445 52.8172 56.7C54.36 55.8633 59.1429 50.7938 59.1429 49.957C59.1429 49.5141 58.2172 47.6438 57.0343 45.7734L54.9772 42.4266L55.8514 40.7531C56.9314 38.6859 57.1372 38.5875 61.0457 37.8984C62.8457 37.5539 64.6972 36.9633 65.1086 36.5695C66.0343 35.6836 66.1372 27.5625 65.2114 26.6766C64.9029 26.3813 62.7943 25.7414 60.6343 25.2984C56.7257 24.4617 56.6743 24.4125 55.8514 22.493L55.08 20.5242L57.0857 17.2758C58.2172 15.4547 59.1429 13.6336 59.1429 13.2398C59.1429 12.3047 52.92 6.39844 51.9429 6.39844C51.5829 6.39844 49.68 7.28438 47.7772 8.36719L44.3829 10.2867L42.3257 9.54844C40.32 8.76094 40.2686 8.71172 39.3943 4.9711C38.9314 2.90391 38.2629 0.885941 37.9543 0.59063C37.0286 -0.295307 28.5429 -0.196869 27.6172 0.689068ZM35.6914 5.7586C36.72 11.025 36.8229 11.2219 40.4743 12.7969C42.3257 13.6336 44.1257 14.2734 44.4343 14.2734C44.7429 14.2734 46.3372 13.4859 47.9829 12.5508C51.48 10.5328 51.7372 10.4836 53.3314 11.9109C54.8743 13.2891 54.8229 13.6828 52.7143 17.0789C51.7372 18.6539 50.9143 20.1797 50.9143 20.475C50.9143 20.7703 51.5829 22.493 52.4572 24.2648C54.1029 27.7594 54.3086 27.8578 59.8114 28.8422C61.7143 29.1375 61.7143 29.1867 61.7143 31.5492V33.9117L59.5543 34.4531C53.4343 35.8805 53.7943 35.6344 52.3029 39.3258C51.5314 41.1961 50.9143 42.8203 50.9143 43.0172C50.9143 43.1648 51.84 44.6906 52.92 46.4625L54.9257 49.6125L53.2286 51.1875L51.5314 52.7625L48.4457 50.9906C46.7486 50.0063 44.9486 49.2188 44.4343 49.2188C43.8686 49.2188 42.0172 49.8094 40.2686 50.4984L37.08 51.8273L36.2057 55.4203L35.28 59.0625H32.8629C30.4457 59.0625 30.3943 59.0133 29.88 57.1922C29.5714 56.1586 29.16 54.6328 29.0057 53.7469C28.8 52.9102 28.44 52.0242 28.08 51.7781C27.1029 51.0398 22.0114 49.2188 21.0343 49.2188C20.5714 49.2188 18.72 50.0063 16.9714 51.0398L13.8343 52.8117L12.24 51.2859L10.6457 49.7602L12.4972 46.7578C13.5772 45.0844 14.4 43.3125 14.4 42.8695C14.4 41.9344 12.4972 37.0617 11.7257 36.1266C11.4686 35.782 10.5429 35.4375 9.66858 35.2406C8.74287 35.093 7.14858 34.6992 6.06858 34.4039C4.16572 33.9117 4.11429 33.8625 4.11429 31.5492V29.2359L7.92001 28.35L11.6743 27.5133L13.0629 24.4617C13.7829 22.7883 14.4 21.0164 14.4 20.475C14.4 19.9828 13.5772 18.2602 12.5486 16.6359L10.6972 13.6828L12.3429 12.0586L13.9886 10.4344L17.28 12.3539C19.1314 13.3875 20.7257 14.2734 20.88 14.2734C21.0857 14.2734 22.7829 13.6828 24.7372 12.9445C28.5943 11.5172 28.3372 11.8617 29.8286 6.00469L30.3943 3.9375H32.8629C35.3314 3.9375 35.3829 3.9375 35.6914 5.7586Z"/>
-                                                    <path d="M28.6457 19.3922C25.6629 20.4258 23.4514 22.0992 21.5486 24.757C20.1086 26.775 19.8 27.7102 19.6457 30.5648C19.1314 38.6367 24.6343 44.2969 32.8629 44.2969C39.8571 44.2969 45.4114 39.4734 46.1314 32.7305C47.1086 23.8219 37.3886 16.4391 28.6457 19.3922ZM36.9257 23.3297C38.52 24.1172 40.7314 26.332 41.6057 27.907C41.9143 28.4977 42.1714 30.1219 42.1714 31.5C42.1714 37.4555 37.2857 41.5406 31.1143 40.6055C27.6171 40.1133 23.9143 36.5695 23.4 33.2227C22.4743 27.3164 26.5886 22.6898 32.8114 22.6406C34.3029 22.6406 36.1543 22.9359 36.9257 23.3297Z"/>
-                                                </g>
-                                                <defs>
-                                                    <clipPath id="clip0_3_5">
-                                                    <rect width="72" height="63" fill="white"/>
-                                                    </clipPath>
-                                                </defs>
-                                            </svg> 
-                                        </div>
+                                        <a href="{{url_for('settings')}}">
+                                            <div class="button__box-picture button__box-picture_position">
+                                                <svg width="72" height="63" viewBox="0 0 72 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <g clip-path="url(#clip0_3_5)">
+                                                        <path d="M27.6172 0.689068C27.2057 1.08282 26.5886 2.85469 26.2286 4.57735C25.5086 8.31797 25.4057 8.51485 23.2457 9.54844L21.4972 10.3852L18 8.41641C16.0457 7.28438 14.0914 6.39844 13.6286 6.39844C12.7543 6.39844 7.45715 10.9758 6.58286 12.4523C6.22286 13.1906 6.53144 14.1258 8.22858 16.882C10.3372 20.3273 10.3886 20.475 9.72001 22.3453C9.00001 24.2648 8.89715 24.3141 5.14286 25.2492C3.03429 25.7414 1.02858 26.3813 0.668578 26.6766C-0.257136 27.4148 -0.257136 35.6344 0.720007 36.5203C1.08001 36.9141 3.13715 37.6031 5.24572 38.0461C9.00001 38.932 9.10287 38.9813 9.77144 40.8516C10.3886 42.6234 10.3372 42.8695 8.69144 45.5766C5.81144 50.3508 5.76001 49.957 9.66858 53.7469C13.6286 57.4875 13.2172 57.4383 18.2057 54.682C21.0343 53.107 21.2914 53.0578 23.1429 53.6484C25.0972 54.2883 25.1486 54.3867 26.0743 57.9797C26.5372 59.9977 27.2572 61.9664 27.6686 62.3109C28.5943 63.2461 37.1829 63.2461 37.9543 62.3602C38.2629 62.0156 38.9314 60.0961 39.4457 58.0781C40.4229 54.4852 40.4743 54.3867 42.48 53.6977C44.4343 53.0578 44.5886 53.107 48.1886 55.125C51.0686 56.7492 52.0457 57.0445 52.8172 56.7C54.36 55.8633 59.1429 50.7938 59.1429 49.957C59.1429 49.5141 58.2172 47.6438 57.0343 45.7734L54.9772 42.4266L55.8514 40.7531C56.9314 38.6859 57.1372 38.5875 61.0457 37.8984C62.8457 37.5539 64.6972 36.9633 65.1086 36.5695C66.0343 35.6836 66.1372 27.5625 65.2114 26.6766C64.9029 26.3813 62.7943 25.7414 60.6343 25.2984C56.7257 24.4617 56.6743 24.4125 55.8514 22.493L55.08 20.5242L57.0857 17.2758C58.2172 15.4547 59.1429 13.6336 59.1429 13.2398C59.1429 12.3047 52.92 6.39844 51.9429 6.39844C51.5829 6.39844 49.68 7.28438 47.7772 8.36719L44.3829 10.2867L42.3257 9.54844C40.32 8.76094 40.2686 8.71172 39.3943 4.9711C38.9314 2.90391 38.2629 0.885941 37.9543 0.59063C37.0286 -0.295307 28.5429 -0.196869 27.6172 0.689068ZM35.6914 5.7586C36.72 11.025 36.8229 11.2219 40.4743 12.7969C42.3257 13.6336 44.1257 14.2734 44.4343 14.2734C44.7429 14.2734 46.3372 13.4859 47.9829 12.5508C51.48 10.5328 51.7372 10.4836 53.3314 11.9109C54.8743 13.2891 54.8229 13.6828 52.7143 17.0789C51.7372 18.6539 50.9143 20.1797 50.9143 20.475C50.9143 20.7703 51.5829 22.493 52.4572 24.2648C54.1029 27.7594 54.3086 27.8578 59.8114 28.8422C61.7143 29.1375 61.7143 29.1867 61.7143 31.5492V33.9117L59.5543 34.4531C53.4343 35.8805 53.7943 35.6344 52.3029 39.3258C51.5314 41.1961 50.9143 42.8203 50.9143 43.0172C50.9143 43.1648 51.84 44.6906 52.92 46.4625L54.9257 49.6125L53.2286 51.1875L51.5314 52.7625L48.4457 50.9906C46.7486 50.0063 44.9486 49.2188 44.4343 49.2188C43.8686 49.2188 42.0172 49.8094 40.2686 50.4984L37.08 51.8273L36.2057 55.4203L35.28 59.0625H32.8629C30.4457 59.0625 30.3943 59.0133 29.88 57.1922C29.5714 56.1586 29.16 54.6328 29.0057 53.7469C28.8 52.9102 28.44 52.0242 28.08 51.7781C27.1029 51.0398 22.0114 49.2188 21.0343 49.2188C20.5714 49.2188 18.72 50.0063 16.9714 51.0398L13.8343 52.8117L12.24 51.2859L10.6457 49.7602L12.4972 46.7578C13.5772 45.0844 14.4 43.3125 14.4 42.8695C14.4 41.9344 12.4972 37.0617 11.7257 36.1266C11.4686 35.782 10.5429 35.4375 9.66858 35.2406C8.74287 35.093 7.14858 34.6992 6.06858 34.4039C4.16572 33.9117 4.11429 33.8625 4.11429 31.5492V29.2359L7.92001 28.35L11.6743 27.5133L13.0629 24.4617C13.7829 22.7883 14.4 21.0164 14.4 20.475C14.4 19.9828 13.5772 18.2602 12.5486 16.6359L10.6972 13.6828L12.3429 12.0586L13.9886 10.4344L17.28 12.3539C19.1314 13.3875 20.7257 14.2734 20.88 14.2734C21.0857 14.2734 22.7829 13.6828 24.7372 12.9445C28.5943 11.5172 28.3372 11.8617 29.8286 6.00469L30.3943 3.9375H32.8629C35.3314 3.9375 35.3829 3.9375 35.6914 5.7586Z"/>
+                                                        <path d="M28.6457 19.3922C25.6629 20.4258 23.4514 22.0992 21.5486 24.757C20.1086 26.775 19.8 27.7102 19.6457 30.5648C19.1314 38.6367 24.6343 44.2969 32.8629 44.2969C39.8571 44.2969 45.4114 39.4734 46.1314 32.7305C47.1086 23.8219 37.3886 16.4391 28.6457 19.3922ZM36.9257 23.3297C38.52 24.1172 40.7314 26.332 41.6057 27.907C41.9143 28.4977 42.1714 30.1219 42.1714 31.5C42.1714 37.4555 37.2857 41.5406 31.1143 40.6055C27.6171 40.1133 23.9143 36.5695 23.4 33.2227C22.4743 27.3164 26.5886 22.6898 32.8114 22.6406C34.3029 22.6406 36.1543 22.9359 36.9257 23.3297Z"/>
+                                                    </g>
+                                                    <defs>
+                                                        <clipPath id="clip0_3_5">
+                                                        <rect width="72" height="63" fill="white"/>
+                                                        </clipPath>
+                                                    </defs>
+                                                </svg> 
+                                            </div>
+                                        </a>
                                     </button>
                                 </div>
                             </div>
