--- a/app/static/src/scss/components/_weather.scss
+++ b/app/static/src/scss/components/_weather.scss
@@ -2,17 +2,20 @@
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: rgba($swatch_0, 0.3);
-    // border: 1px solid $swatch_2;
     @media (min-width: $md) {
         margin-top: 50px;
     }
     &__content-top {
-        // background-color: rgb(212, 103, 103);
+        
     }
     &__content-middle {
-        // background-color: rgb(206, 226, 116);
+        
     }
     &__content-bottom {
-        // background-color: rgb(70, 150, 224);
+       
     }
+    &__box-form {
+       padding: 10px;
+    }
+
 }
