--- a/app/static/src/scss/vars/_variables.scss
+++ b/app/static/src/scss/vars/_variables.scss
@@ -16,4 +16,6 @@ $swatch_8: #E5E5E5;
 $swatch_9: #e61278;
 $swatch_10: #00000040;
 $swatch_11: #00000070;
+$swatch_12: #141414;
+$swatch_13: #232d69;
 
